pebble_util: bring in-tree downcast-rs and make needed modifications
This temporarily brings the downcast-rs crate in-tree and makes changes to
it to allow it to be used from no_std contexts. In due course, I either
want to either upstream these, or write a better library to do this in a
nicer way, but that can happy at some other time.

I've added some comments in-line about questions about making the library
nicer to use / improving the implementation.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -10,7 +10,7 @@ crate-type = ["staticlib"]
 [dependencies]
 hal = { path = "hal" }
 hal_x86_64 = { path = "hal_x86_64", features = ["kernel"], optional = true }
-pebble_util = { path = "../lib/pebble_util" }
+pebble_util = { path = "../lib/pebble_util", features = ["has_alloc"] }
 cfg-if = "0.1"
 bitflags = "1"
 bit_field = "0.10"
