--- a/drivers/simple_fb/Cargo.toml
+++ b/drivers/simple_fb/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
-libpebble = { path = "../../lib/libpebble" }
+libpebble = { path = "../../lib/libpebble", features = ["can_alloc"] }
 linked_list_allocator = "0.8"
+log = "0.4"
