--- a/lib/libpebble/Cargo.toml
+++ b/lib/libpebble/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2018"
 [dependencies]
 cfg-if = "0.1"
 bit_field = "0.10"
+log = { version = "0.4", optional = true }
+
+[features]
+can_alloc = ["log"]
