libpebble: start thinking about handle rights
This doesn't actually use rights in any way, just starts thinking about how
we might represent them and what some of them might be.

--- a/lib/libpebble/Cargo.toml
+++ b/lib/libpebble/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 cfg-if = "0.1"
 bit_field = "0.10"
 log = { version = "0.4", optional = true }
+bitflags = "1"
 
 [features]
 can_alloc = ["log"]
