kernel: start of platforms and add hal_arm64 plumbing
We're starting work on our first ARM64 platform - the Raspberry Pi 4! This
is also going to include a lot of work on the idea of 'platforms' themselves
and inadequacies of the build system and such.

This leaves the Makefiles a bit of a mess but they'll be disappearing in
due course so it doesn't really matter.

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["staticlib"]
 [dependencies]
 hal = { path = "hal" }
 hal_x86_64 = { path = "hal_x86_64", features = ["kernel"], optional = true }
+hal_arm64 = { path = "hal_arm64", optional = true }
 pebble_util = { path = "../lib/pebble_util", features = ["has_alloc"] }
 cfg-if = "0.1"
 bitflags = "1"
@@ -19,7 +20,8 @@ log = { version = "0.4", default-features = false }
 libpebble = { path = "../lib/libpebble" }
 
 [features]
-arch_x86_64 = ["hal_x86_64"]
+platform_x86_64 = ["hal_x86_64"]
+platform_rpi4 = ["hal_arm64"]
 
 [workspace]
-members = ["efiloader", "hal", "hal_x86_64"]
+members = ["efiloader", "hal", "hal_x86_64", "hal_arm64"]
