--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,8 +1,8 @@
 .PHONY: kernel_x86_64 efiloader clean
 
 kernel_x86_64: efiloader
-	cargo xbuild --target=hal_$(ARCH)/$(ARCH)-kernel.json --features arch_$(ARCH)
-	ld --gc-sections -T hal_$(ARCH)/link.ld -o $(BUILD_DIR)/fat/kernel.elf target/$(ARCH)-kernel/debug/libkernel.a
+	cargo xbuild --target=hal_x86_64/x86_64-kernel.json --features platform_x86_64
+	ld --gc-sections -T hal_x86_64/link.ld -o $(BUILD_DIR)/fat/kernel.elf target/x86_64-kernel/debug/libkernel.a
 
 efiloader:
 	cargo xbuild --target=x86_64-unknown-uefi --manifest-path efiloader/Cargo.toml
