--- a/kernel/kernel_x86_64/Cargo.toml
+++ b/kernel/kernel_x86_64/Cargo.toml
@@ -14,3 +14,7 @@ hal = { path = "../hal" }
 hal_x86_64 = { path = "../hal_x86_64" }
 spin = "0.5"
 log = "0.4"
+bit_field = "0.10"
+acpi = { path = "../../lib/acpi/acpi" }
+aml = { path = "../../lib/acpi/aml" }
+pebble_util = { path = "../../lib/pebble_util" }
