--- a/drivers/simple_fb/Cargo.toml
+++ b/drivers/simple_fb/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2018"
 libpebble = { path = "../../lib/libpebble", features = ["can_alloc"] }
 linked_list_allocator = "0.8"
 log = "0.4"
+font8x8 = { version = "0.2", default-features = false, features = ["unicode"] }
+bit_field = "0.10"
