--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -15,4 +15,4 @@ log = { version = "0.4", default-features = false }
 libpebble = { path = "../lib/libpebble" }
 
 [workspace]
-members = ["efiloader", "hal", "hal_x86_64", "hal_arm64", "kernel_x86_64"]
+members = ["efiloader", "hal", "hal_x86_64", "hal_arm64", "kernel_x86_64", "kernel_rpi4"]
