--- a/lib/ptah/Cargo.toml
+++ b/lib/ptah/Cargo.toml
@@ -7,4 +7,4 @@ description = "A serde data format for efficient message passing"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-serde = { version = "1", default-features = false }
+serde = { version = "1", default-features = false, features = ["derive", "unstable", "alloc"] }
