--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -2,7 +2,7 @@
 
 kernel_x86_64: efiloader
 	cargo xbuild --target=kernel_x86_64/x86_64-kernel.json --manifest-path kernel_x86_64/Cargo.toml
-	ld --gc-sections -T kernel_x86_64/link.ld -o $(BUILD_DIR)/fat/kernel.elf target/x86_64-kernel/debug/libkernel_x86_64.a
+	cp target/x86_64-kernel/debug/kernel_x86_64 $(BUILD_DIR)/fat/kernel.elf
 
 efiloader:
 	cargo xbuild --target=x86_64-unknown-uefi --manifest-path efiloader/Cargo.toml
