build: allow builder to pass arguments to kernel's cargo command

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,7 +1,7 @@
 .PHONY: kernel_x86_64 efiloader kernel_rpi4 test clean
 
 kernel_x86_64: efiloader
-	cargo xbuild --target=kernel_x86_64/x86_64-kernel.json --manifest-path kernel_x86_64/Cargo.toml
+	cargo xbuild --target=kernel_x86_64/x86_64-kernel.json --manifest-path kernel_x86_64/Cargo.toml $(KERNEL_FLAGS)
 	cp target/x86_64-kernel/debug/kernel_x86_64 $(BUILD_DIR)/fat/kernel.elf
 
 efiloader:
@@ -9,7 +9,7 @@ efiloader:
 	cp target/x86_64-unknown-uefi/debug/efiloader.efi $(BUILD_DIR)/fat/efiloader.efi
 
 kernel_rpi4:
-	RUSTFLAGS="-Ctarget-cpu=cortex-a72" cargo xbuild --target=kernel_rpi4/rpi4-kernel.json --manifest-path kernel_rpi4/Cargo.toml
+	RUSTFLAGS="-Ctarget-cpu=cortex-a72" cargo xbuild --target=kernel_rpi4/rpi4-kernel.json --manifest-path kernel_rpi4/Cargo.toml $(KERNEL_FLAGS)
 
 test:
 	cargo test --all-features
