--- a/kernel/kernel_x86_64/Cargo.toml
+++ b/kernel/kernel_x86_64/Cargo.toml
@@ -15,3 +15,6 @@ bit_field = "0.10"
 acpi = { path = "../../lib/acpi/acpi" }
 aml = { path = "../../lib/acpi/aml" }
 pebble_util = { path = "../../lib/pebble_util" }
+
+[features]
+qemu_exit = ["hal_x86_64/qemu"]
