ci: try to run kernel in QEMU
At the moment, the kernel will hopefully also fault on CI and so exits
when it panics. In the future, we'll need to think of a way to nicely
exit QEMU on the success path.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ git:
 
 install:
   - sudo apt-get install mtools
+  - sudo apt-get install qemu
   - rustup component add rust-src
   - cargo install cargo-xbuild
   - cargo install mdbook
@@ -16,6 +17,7 @@ script:
   - make
   - make test
   - make site
+  - KERNEL_FLAGS='--features qemu_exit' make qemu-no-kvm
 
 branches:
   only:
