--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: 'recursive'
       
     - name: Install Rust
       uses: actions-rs/toolchain@v1
@@ -25,7 +27,10 @@ jobs:
         components: rust-src
         
     - name: Install dependencies
-      run: cargo install cargo-xbuild
+      run: |
+        sudo apt-get install mtools
+        sudo apt-get install qemu
+        cargo install cargo-xbuild
         
     - name: Build
       run: make
