Use new build-std feature to remove need for cargo_xbuild

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,11 +1,11 @@
 .PHONY: kernel_x86_64 efiloader kernel_rpi4 test clean
 
 kernel_x86_64: efiloader
-	cargo xbuild --target=kernel_x86_64/x86_64-kernel.json --manifest-path kernel_x86_64/Cargo.toml $(KERNEL_FLAGS)
+	cargo build -Z build-std=core,alloc --target=kernel_x86_64/x86_64-kernel.json --manifest-path kernel_x86_64/Cargo.toml $(KERNEL_FLAGS)
 	cp target/x86_64-kernel/debug/kernel_x86_64 $(BUILD_DIR)/fat/kernel.elf
 
 efiloader:
-	cargo xbuild --target=x86_64-unknown-uefi --manifest-path efiloader/Cargo.toml
+	cargo build -Z build-std=core --target=x86_64-unknown-uefi --manifest-path efiloader/Cargo.toml
 	cp target/x86_64-unknown-uefi/debug/efiloader.efi $(BUILD_DIR)/fat/efiloader.efi
 
 kernel_rpi4:
