--- a/kernel/efiloader/Cargo.toml
+++ b/kernel/efiloader/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
+rlibc = "1"
 hal = { path = "../hal" }
 hal_x86_64 = { path = "../hal_x86_64" }
 log = "0.4"
