--- a/kernel/kernel_x86_64/Cargo.toml
+++ b/kernel/kernel_x86_64/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
+rlibc = "1"
 kernel = { path = "../" }
 hal = { path = "../hal" }
 hal_x86_64 = { path = "../hal_x86_64" }
