--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,3 +42,4 @@ jobs:
       run: |
         qemu-system-x86_64 --version
         KERNEL_FLAGS='--features qemu_exit' QEMU_EXTRA_FLAGS='-display none' make qemu-no-kvm
+      timeout-minutes: 60
