--- a/kernel/kernel_x86_64/Cargo.toml
+++ b/kernel/kernel_x86_64/Cargo.toml
@@ -15,6 +15,7 @@ bit_field = "0.10"
 acpi = { path = "../../lib/acpi/acpi" }
 aml = { path = "../../lib/acpi/aml" }
 pebble_util = { path = "../../lib/pebble_util" }
+gfxconsole = { path = "../../lib/gfxconsole" }
 
 [features]
 qemu_exit = ["hal_x86_64/qemu"]
