--- a/lib/pebble_util/Cargo.toml
+++ b/lib/pebble_util/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 [dependencies]
 cfg-if = "0.1"
 bit_field = "0.10"
-num = { version = "0.2", default-features = false }
+num-traits = { version = "0.2", default-features = false }
 
 [features]
 has_alloc = []
