--- a/kernel/efiloader/Cargo.toml
+++ b/kernel/efiloader/Cargo.toml
@@ -9,7 +9,8 @@ rlibc = "1"
 hal = { path = "../hal" }
 hal_x86_64 = { path = "../hal_x86_64" }
 log = "0.4"
+spin = "0.5"
 uefi = { path = "../../lib/uefi-rs" }
 ucs2 = { path = "../../lib/ucs2-rs" }
 mer = { path = "../../lib/mer" }
-spin = "0.5"
+gfxconsole = { path = "../../lib/gfxconsole" }
