Add pci_types as a submodule
This is a new library that contains types useful for managing PCI devices.
We needed this anyway, but it's a bunch of code that can be shared pretty
easily with other projects so we might as well develop it out-of-tree.

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "lib/ucs2-rs"]
 	path = lib/ucs2-rs
 	url = https://github.com/IsaacWoods/ucs2-rs
+[submodule "lib/pci_types"]
+	path = lib/pci_types
+	url = git@github.com:rust-osdev/pci_types
