Update dependencies across tree

--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -10,10 +10,11 @@ pebble_util = { path = "../lib/pebble_util", features = ["has_alloc"] }
 cfg-if = "0.1"
 bitflags = "1"
 bit_field = "0.10"
-spin = "0.4"
+spin = "0.5"
 log = { version = "0.4", default-features = false }
 libpebble = { path = "../lib/libpebble" }
 ptah = { path = "../lib/ptah" }
+pci_types = { path = "../lib/pci_types" }
 
 [workspace]
 members = ["efiloader", "hal", "hal_x86_64", "hal_arm64", "kernel_x86_64", "kernel_rpi4"]
