--- a/drivers/pci_bus/Cargo.toml
+++ b/drivers/pci_bus/Cargo.toml
@@ -9,3 +9,4 @@ rlibc = "1"
 libpebble = { path = "../../lib/libpebble", features = ["can_alloc"] }
 linked_list_allocator = "0.8"
 log = "0.4"
+pci_types = { path = "../../lib/pci_types" }
