--- a/lib/libpebble/Cargo.toml
+++ b/lib/libpebble/Cargo.toml
@@ -9,6 +9,7 @@ cfg-if = "0.1"
 bit_field = "0.10"
 log = { version = "0.4", optional = true }
 bitflags = "1"
+pci_types = { path = "../pci_types" }
 
 [features]
 can_alloc = ["log"]
