Rename 'drivers' to 'user', defer to sub-makefile
We want to start building things that aren't really drivers per-se, so
make the directory for all user stuff, and then we can make sub-directories
when needed for things like USB host controller drivers or whatever. I think
that'll be cleaner than having a bunch of top-level directories, and also
allows us to share the target directory between all userspace applications,
which is a plus for build time and storage requirements.

Also build a sub-makefile, like we have for the kernel, to tidy a few things
up. In the near future, I think we'll be building a separate build system,
but this is fine for now.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,4 +1,4 @@
-.PHONY: kernel_x86_64 efiloader kernel_rpi4 test clean
+.PHONY: kernel_x86_64 efiloader kernel_rpi4 test clean update
 
 kernel_x86_64: efiloader
 	cargo build -Z build-std=core,alloc --target=kernel_x86_64/x86_64-kernel.json --manifest-path kernel_x86_64/Cargo.toml $(KERNEL_FLAGS)
@@ -16,6 +16,9 @@ test:
 	cargo test --all-features --manifest-path hal/Cargo.toml
 	cargo test --all-features --manifest-path hal_x86_64/Cargo.toml
 	cargo test --all-features --manifest-path hal_arm64/Cargo.toml
+
+update:
+	cargo update
 
 clean:
 	cargo clean
