--- a/user/pci_bus/Cargo.toml
+++ b/user/pci_bus/Cargo.toml
@@ -10,3 +10,5 @@ libpebble = { path = "../../lib/libpebble", features = ["can_alloc"] }
 linked_list_allocator = "0.8"
 log = "0.4"
 pci_types = { path = "../../lib/pci_types" }
+platform_bus = { path = "../platform_bus" }
+ptah = { path = "../../lib/ptah" }
