Switch to using inbuilt target (on fork) for userspace!

--- a/user/Makefile
+++ b/user/Makefile
@@ -3,20 +3,20 @@
 user: echo simple_fb platform_bus pci_bus;
 
 echo:
-	cargo build -Z build-std=core,alloc --target $(PLATFORM)-pebble-userspace.json --manifest-path echo/Cargo.toml
-	cp target/$(PLATFORM)-pebble-userspace/debug/echo $(BUILD_DIR)/fat/echo.elf
+	cargo +pebble build -Z build-std=core,alloc --target x86_64-pebble --manifest-path echo/Cargo.toml
+	cp target/$(PLATFORM)-pebble/debug/echo $(BUILD_DIR)/fat/echo.elf
 
 simple_fb:
-	cargo build -Z build-std=core,alloc --target $(PLATFORM)-pebble-userspace.json --manifest-path simple_fb/Cargo.toml
-	cp target/$(PLATFORM)-pebble-userspace/debug/simple_fb $(BUILD_DIR)/fat/simple_fb.elf
+	cargo +pebble build -Z build-std=core,alloc --target x86_64-pebble --manifest-path simple_fb/Cargo.toml
+	cp target/$(PLATFORM)-pebble/debug/simple_fb $(BUILD_DIR)/fat/simple_fb.elf
 
 platform_bus:
-	cargo build -Z build-std=core,alloc --target $(PLATFORM)-pebble-userspace.json --manifest-path platform_bus/Cargo.toml
-	cp target/$(PLATFORM)-pebble-userspace/debug/platform_bus $(BUILD_DIR)/fat/platform_bus.elf
+	cargo +pebble build -Z build-std=core,alloc --target x86_64-pebble --manifest-path platform_bus/Cargo.toml
+	cp target/$(PLATFORM)-pebble/debug/platform_bus $(BUILD_DIR)/fat/platform_bus.elf
 
 pci_bus:
-	cargo build -Z build-std=core,alloc --target $(PLATFORM)-pebble-userspace.json --manifest-path pci_bus/Cargo.toml
-	cp target/$(PLATFORM)-pebble-userspace/debug/pci_bus $(BUILD_DIR)/fat/pci_bus.elf
+	cargo +pebble build -Z build-std=core,alloc --target x86_64-pebble --manifest-path pci_bus/Cargo.toml
+	cp target/$(PLATFORM)-pebble/debug/pci_bus $(BUILD_DIR)/fat/pci_bus.elf
 
 update:
 	cargo update
