ptah: start rework
We've decided to move away from Serde as it makes encoding handles basically
impossible unfortunately. This starts the implementation of our new ptah
implementation for Rust.

--- a/lib/ptah/Cargo.toml
+++ b/lib/ptah/Cargo.toml
@@ -3,8 +3,7 @@ name = "ptah"
 version = "0.0.0"
 authors = ["Isaac Woods"]
 edition = "2018"
-description = "A serde data format for efficient message passing"
+description = "Rust implementation of Ptah, Pebble's message-passing format"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-serde = { version = "1", default-features = false, features = ["derive", "unstable", "alloc"] }
