--- a/lib/ptah/Cargo.toml
+++ b/lib/ptah/Cargo.toml
@@ -1,3 +1,6 @@
+[workspace]
+members = ["ptah_derive"]
+
 [package]
 name = "ptah"
 version = "0.0.0"
@@ -7,4 +10,9 @@ description = "Rust implementation of Ptah, Pebble's message-passing format"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+ptah_derive = { path = "ptah_derive", optional = true }
+
+[features]
+default = ["alloc", "derive"]
+derive = ["ptah_derive"]
 alloc = []
