--- a/user/Cargo.toml
+++ b/user/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["simple_fb", "echo", "platform_bus", "pci_bus"]
+members = ["simple_fb", "echo", "platform_bus", "pci_bus", "usb_bus_xhci"]
 
 [profile.dev]
 debug = false
