--- a/user/usb_bus_xhci/Cargo.toml
+++ b/user/usb_bus_xhci/Cargo.toml
@@ -11,3 +11,4 @@ linked_list_allocator = "0.8"
 log = "0.4"
 platform_bus = { path = "../platform_bus" }
 ptah = { path = "../../lib/ptah" }
+bit_field = "0.10"
