--- a/lib/ptah/Cargo.toml
+++ b/lib/ptah/Cargo.toml
@@ -3,14 +3,17 @@ members = ["ptah_derive"]
 
 [package]
 name = "ptah"
-version = "0.0.0"
+version = "0.1.0"
 authors = ["Isaac Woods"]
 edition = "2018"
 description = "Rust implementation of Ptah, Pebble's message-passing format"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-ptah_derive = { path = "ptah_derive", optional = true }
+ptah_derive = { version = "0.1.0", optional = true }
+
+[patch.crates-io]
+ptah_derive = { path = "ptah_derive" }
 
 [features]
 default = ["alloc", "derive"]
