--- a/lib/libpebble/Cargo.toml
+++ b/lib/libpebble/Cargo.toml
@@ -1,18 +1,20 @@
 [package]
 name = "libpebble"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["Isaac Woods"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
 description = "Rust interace to the Pebble kernel from userspace"
 
 [dependencies]
+# This is a weird hack needed to make this usable from Rust's `std`
+core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
 cfg-if = "0.1"
 bit_field = "0.10"
 log = { version = "0.4", optional = true }
 bitflags = "1"
-pci_types = "0.2"
-ptah = { version = "0.1", optional = true }
+pci_types = "0.2.0"
+ptah = { version = "0.1.0", optional = true }
 
 [patch.crates-io]
 pci_types = { path = "../pci_types" }
@@ -20,3 +22,4 @@ ptah = { path = "../ptah" }
 
 [features]
 can_alloc = ["log", "ptah"]
+rustc-dep-of-std = ["core"]
