--- a/lib/libpebble/Cargo.toml
+++ b/lib/libpebble/Cargo.toml
@@ -6,19 +6,26 @@ edition = "2018"
 license = "MIT OR Apache-2.0"
 description = "Rust interace to the Pebble kernel from userspace"
 
+# NOTE: dependencies that aren't designed for use from `std` can't be used here unless they're behind optional
+# features we don't need from `std`
 [dependencies]
-# This is a weird hack needed to make this usable from Rust's `std`
-core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
 cfg-if = "0.1"
 log = { version = "0.4", optional = true }
-bitflags = "1"
-pci_types = "0.2.0"
-ptah = { version = "0.1.0", optional = true }
+pci_types = { version = "0.2.0", optional = true }
+# ptah = { version = "0.1.0", optional = true, default-features = false }
+ptah = { path = "../ptah", optional = true, default-features = false }
+
+# This is a weird hack needed to make this usable from Rust's `std`
+core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
+compiler_builtins = { version = "0.1.35", optional = true }
+alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
 
 [patch.crates-io]
 pci_types = { path = "../pci_types" }
-ptah = { path = "../ptah" }
+# ptah = { path = "../ptah" }
 
 [features]
+default = ["can_alloc", "pci"]
 can_alloc = ["log", "ptah"]
-rustc-dep-of-std = ["core"]
+pci = ["pci_types"]
+rustc-dep-of-std = ["core", "compiler_builtins", "alloc"]
