user: add test for basic TLS usage
This tests that TLS works without pulling in the full libstd thing and
whatnot. It's not meant to be used in real systems and should probably be
put somewhere else when we have a bunch of these (`user/tests` subdirectory
or something).

--- a/user/Cargo.toml
+++ b/user/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["simple_fb", "echo", "platform_bus", "pci_bus", "usb_bus_xhci"]
+members = ["simple_fb", "echo", "platform_bus", "pci_bus", "usb_bus_xhci", "test_tls"]
 
 [profile.dev]
 debug = false
