--- a/tools/butler/Cargo.toml
+++ b/tools/butler/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2018"
 
 [dependencies]
 clap = "2"
+futures = "0.3"
 tokio = { version = "0.3", features = ["full"] }
 async-trait = "0.1"
