butler: provide build step for building a GPT image
This just tests out the various crates we're using to build a GPT image
with a FAT32 partition. This is actually correctly detected from OVMF!

--- a/tools/butler/Cargo.toml
+++ b/tools/butler/Cargo.toml
@@ -9,5 +9,8 @@ clap = "2"
 futures = "0.3"
 tokio = { version = "0.3", features = ["full"] }
 async-trait = "0.1"
+gpt = "2"
 eyre = "0.6"
 color-eyre = "0.5"
+fscommon = "0.1"
+fatfs = "0.3"
