Make `cargo bu` alias nicer to use

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,2 @@
 [alias]
-bu = "run --release --manifest-path tools/butler/Cargo.toml"
+bu = "run --release --manifest-path tools/butler/Cargo.toml --"
