--- a/user/Cargo.toml
+++ b/user/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["simple_fb", "echo", "platform_bus", "pci_bus", "usb_bus_xhci", "test_tls", "test_pf"]
+members = ["simple_fb", "echo", "platform_bus", "pci_bus", "usb_bus_xhci", "test_tls", "test_pf", "test1", "test2"]
 
 [profile.dev]
 debug = false
