--- a/user/tests/test1/Cargo.toml
+++ b/user/tests/test1/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
-libpebble = { path = "../../lib/libpebble", features = ["can_alloc"] }
+libpebble = { path = "../../../lib/libpebble", features = ["can_alloc"] }
 linked_list_allocator = "0.9.0"
 log = "0.4"
