--- a/user/tests/test_pf/Cargo.toml
+++ b/user/tests/test_pf/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "test2"
+name = "test_pf"
 version = "0.1.0"
 authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
-libpebble = { path = "../../lib/libpebble", features = ["can_alloc"] }
+libpebble = { path = "../../../lib/libpebble", features = ["can_alloc"] }
 linked_list_allocator = "0.9.0"
 log = "0.4"
