--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -12,7 +12,7 @@ bitflags = "1"
 bit_field = "0.10"
 spin = "0.9.2"
 log = { version = "0.4", default-features = false }
-libpebble = { path = "../lib/libpebble" }
+poplar = { path = "../lib/poplar" }
 ptah = { path = "../lib/ptah" }
 pci_types = "0.2"
 
