--- a/user/platform_bus/Cargo.toml
+++ b/user/platform_bus/Cargo.toml
@@ -13,7 +13,7 @@ name = "platform_bus"
 path = "src/main.rs"
 
 [dependencies]
-libpebble = { path = "../../lib/libpebble", features = ["can_alloc"] }
+poplar = { path = "../../lib/poplar", features = ["can_alloc"] }
 linked_list_allocator = "0.9.0"
 log = "0.4"
 ptah = { path = "../../lib/ptah" }
