--- a/user/tests/test2/Cargo.toml
+++ b/user/tests/test2/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
-libpebble = { path = "../../../lib/libpebble", features = ["can_alloc"] }
+poplar = { path = "../../../lib/poplar", features = ["can_alloc"] }
 linked_list_allocator = "0.9.0"
 log = "0.4"
