rename: rename pebble_util to poplar_util
I hope to get rid of this crate at some point, but for now let's do a proper
job and rename it.

--- a/kernel/hal_x86_64/Cargo.toml
+++ b/kernel/hal_x86_64/Cargo.toml
@@ -9,7 +9,7 @@ hal = { path = "../hal" }
 bitflags = "1"
 bit_field = "0.10"
 spin = "0.9.2"
-pebble_util = { path = "../../lib/pebble_util" }
+poplar_util = { path = "../../lib/poplar_util" }
 log = { version = "0.4", default-features = false }
 
 [features]
