--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 hal = { path = "hal" }
-pebble_util = { path = "../lib/pebble_util", features = ["has_alloc"] }
+poplar_util = { path = "../lib/poplar_util", features = ["has_alloc"] }
 cfg-if = "0.1"
 bitflags = "1"
 bit_field = "0.10"
