--- a/kernel/efiloader/Cargo.toml
+++ b/kernel/efiloader/Cargo.toml
@@ -12,4 +12,4 @@ spin = "0.9.2"
 uefi = { path = "../../lib/uefi-rs" }
 mer = { path = "../../lib/mer" }
 gfxconsole = { path = "../../lib/gfxconsole" }
-pebble_util = { path = "../../lib/pebble_util" }
+poplar_util = { path = "../../lib/poplar_util" }
