--- a/lib/ptah/ptah_derive/Cargo.toml
+++ b/lib/ptah/ptah_derive/Cargo.toml
@@ -3,7 +3,7 @@ name = "ptah_derive"
 version = "0.1.0"
 authors = ["Isaac Woods"]
 edition = "2018"
-description = "Derive macro for Rust's implementation of Ptah, Pebble's message-passing format"
+description = "Derive macro for Rust's implementation of Ptah, Poplar's message-passing format"
 license = "MIT OR Apache-2.0"
 
 [lib]
