--- a/lib/poplar/Cargo.toml
+++ b/lib/poplar/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "poplar"
-version = "0.3.0"
+version = "0.1.0"
 authors = ["Isaac Woods"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -12,8 +12,8 @@ description = "Rust interace to the Poplar kernel from userspace"
 cfg-if = "0.1"
 log = { version = "0.4", optional = true }
 pci_types = { version = "0.2.0", optional = true }
-# ptah = { version = "0.1.0", optional = true, default-features = false }
-ptah = { path = "../ptah", optional = true, default-features = false }
+ptah = { version = "0.2.0", optional = true, default-features = false }
+# ptah = { path = "../ptah", optional = true, default-features = false }
 
 # This is a weird hack needed to make this usable from Rust's `std`
 core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
@@ -22,7 +22,7 @@ alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-all
 
 [patch.crates-io]
 pci_types = { path = "../pci_types" }
-# ptah = { path = "../ptah" }
+ptah = { path = "../ptah" }
 
 [features]
 default = ["can_alloc", "pci"]
