--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "lib/pci_types"]
 	path = lib/pci_types
 	url = git@github.com:rust-osdev/pci_types
+[submodule "lib/opensbi"]
+	path = lib/opensbi
+	url = https://github.com/riscv-software-src/opensbi
