--- a/kernel/efiloader/Cargo.toml
+++ b/kernel/efiloader/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
-hal = { path = "../hal" }
-hal_x86_64 = { path = "../hal_x86_64" }
+hal = { path = "../../lib/hal" }
+hal_x86_64 = { path = "../../lib/hal_x86_64" }
 log = "0.4"
 spin = "0.9.2"
 uefi = { path = "../../lib/uefi-rs" }
