--- a/lib/hal_riscv/Cargo.toml
+++ b/lib/hal_riscv/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 
 [dependencies]
 hal = { path = "../hal" }
-volatile = { path = "../../lib/volatile" }
+volatile = { path = "../volatile" }
