--- a/kernel/kernel_riscv/Cargo.toml
+++ b/kernel/kernel_riscv/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Isaac Woods"]
 edition = "2021"
 
 [dependencies]
-hal_riscv = { path = "../hal_riscv" }
+hal_riscv = { path = "../../lib/hal_riscv" }
