--- a/seed/seed_riscv/Cargo.toml
+++ b/seed/seed_riscv/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 hal = { path = "../../lib/hal" }
 hal_riscv = { path = "../../lib/hal_riscv" }
 fdt = "0.1.3"
+tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
+tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
+poplar_util = { path = "../../lib/poplar_util" }
