seed_riscv: get the thing actually working
We were getting really weird behaviour before with the tracing stuff,
that was leading me to think code was being corrupted somehow. We seem to
have fixed that by stripping everything right back to basics and making
sure we're loading everything right, but I haven't convincingly found
the problem. Oh well - let's start adding stuff back and see what breaks.

--- a/seed/seed_riscv/Cargo.toml
+++ b/seed/seed_riscv/Cargo.toml
@@ -5,9 +5,5 @@ authors = ["Isaac Woods"]
 edition = "2021"
 
 [dependencies]
-hal = { path = "../../lib/hal" }
-hal_riscv = { path = "../../lib/hal_riscv" }
 fdt = "0.1.3"
-tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
-tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
-poplar_util = { path = "../../lib/poplar_util" }
+log = "0.4.17"
