--- a/seed/seed_riscv/Cargo.toml
+++ b/seed/seed_riscv/Cargo.toml
@@ -10,4 +10,5 @@ hal_riscv = { path = "../../lib/hal_riscv/" }
 poplar_util = { path = "../../lib/poplar_util/" }
 spinning_top = "0.2.4"
 fdt = "0.1.3"
-log = "0.4.17"
+tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
+tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
