--- a/seed/seed_riscv/Cargo.toml
+++ b/seed/seed_riscv/Cargo.toml
@@ -9,6 +9,7 @@ hal = { path = "../../lib/hal/" }
 hal_riscv = { path = "../../lib/hal_riscv/" }
 poplar_util = { path = "../../lib/poplar_util/" }
 spinning_top = "0.2.4"
+bit_field = "0.10.1"
 fdt = "0.1.3"
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
