--- a/seed/seed_riscv/Cargo.toml
+++ b/seed/seed_riscv/Cargo.toml
@@ -8,8 +8,10 @@ edition = "2021"
 hal = { path = "../../lib/hal/" }
 hal_riscv = { path = "../../lib/hal_riscv/" }
 poplar_util = { path = "../../lib/poplar_util/" }
+volatile = { path = "../../lib/volatile" }
 spinning_top = "0.2.4"
 bit_field = "0.10.1"
 fdt = "0.1.3"
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
+arrayvec = { version = "0.7.2", default-features = false }
