--- a/seed/seed_riscv/Cargo.toml
+++ b/seed/seed_riscv/Cargo.toml
@@ -15,3 +15,4 @@ fdt = "0.1.3"
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 arrayvec = { version = "0.7.2", default-features = false }
+mer = { path = "../../lib/mer/" }
