--- a/lib/hal_riscv/Cargo.toml
+++ b/lib/hal_riscv/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 [dependencies]
 hal = { path = "../hal" }
 volatile = { path = "../volatile" }
+bitflags = "1.3.2"
 bit_field = "0.10.1"
+poplar_util = { path = "../poplar_util" }
+tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
