hal,kernel,seed_uefi,kernel_x86_64: move to Seed's new `boot_info`

--- a/kernel/kernel_x86_64/Cargo.toml
+++ b/kernel/kernel_x86_64/Cargo.toml
@@ -9,6 +9,7 @@ rlibc = "1"
 kernel = { path = "../" }
 hal = { path = "../../lib/hal" }
 hal_x86_64 = { path = "../../lib/hal_x86_64" }
+seed = { path = "../../seed" }
 spin = "0.9.2"
 log = "0.4"
 bit_field = "0.10"
