--- a/seed/seed_uefi/Cargo.toml
+++ b/seed/seed_uefi/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Isaac Woods"]
 edition = "2018"
 
 [dependencies]
+seed = { path = ".." }
 hal = { path = "../../lib/hal" }
 hal_x86_64 = { path = "../../lib/hal_x86_64" }
 log = "0.4"
@@ -13,3 +14,4 @@ uefi = { path = "../../lib/uefi-rs" }
 mer = { path = "../../lib/mer" }
 gfxconsole = { path = "../../lib/gfxconsole" }
 poplar_util = { path = "../../lib/poplar_util" }
+heapless = "0.7.16"
