--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 hal = { path = "../lib/hal" }
+seed = { path = "../seed" }
 poplar_util = { path = "../lib/poplar_util", features = ["has_alloc"] }
 cfg-if = "0.1"
 bitflags = "1"
