--- a/kernel/kernel_riscv/Cargo.toml
+++ b/kernel/kernel_riscv/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 hal = { path = "../../lib/hal" }
 hal_riscv = { path = "../../lib/hal_riscv" }
 seed = { path = "../../seed" }
+tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
+tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
+spinning_top = { version = "0.2.4", features = ["nightly"] }
+poplar_util = { path = "../../lib/poplar_util/" }
