--- a/seed/seed_riscv/Cargo.toml
+++ b/seed/seed_riscv/Cargo.toml
@@ -10,7 +10,7 @@ hal = { path = "../../lib/hal/" }
 hal_riscv = { path = "../../lib/hal_riscv/" }
 poplar_util = { path = "../../lib/poplar_util/" }
 volatile = { path = "../../lib/volatile" }
-spinning_top = "0.2.4"
+spinning_top = { version = "0.2.4", features = ["nightly"] }
 bit_field = "0.10.1"
 fdt = "0.1.3"
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
