--- a/kernel/Cargo.toml
+++ b/kernel/Cargo.toml
@@ -12,10 +12,10 @@ cfg-if = "0.1"
 bitflags = "1"
 bit_field = "0.10"
 spin = "0.9.2"
-log = { version = "0.4", default-features = false }
 poplar = { path = "../lib/poplar" }
 ptah = { path = "../lib/ptah" }
 pci_types = "0.2"
+tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 
 [patch.crates-io]
 pci_types = { path = "../lib/pci_types" }
