--- a/tools/xtask/Cargo.toml
+++ b/tools/xtask/Cargo.toml
@@ -12,3 +12,5 @@ color-eyre = "0.5.11"
 gpt = "2.0.0"
 fatfs = "0.3.5"
 fscommon = "0.1.1"
+serde = { version = "1.0.152", features = ["derive"] }
+toml = "0.7.2"
