--- a/seed/seed_riscv/Cargo.toml
+++ b/seed/seed_riscv/Cargo.toml
@@ -12,7 +12,7 @@ poplar_util = { path = "../../lib/poplar_util/" }
 volatile = { path = "../../lib/volatile" }
 spinning_top = { version = "0.2.4", features = ["nightly"] }
 bit_field = "0.10.1"
-fdt = "0.1.3"
+fdt = { version = "0.1.5", features = ["pretty-printing"] }
 tracing = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 tracing-core = { git = "https://github.com/tokio-rs/tracing", default-features = false }
 arrayvec = { version = "0.7.2", default-features = false }
