--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,10 +1,10 @@
 unstable_features = true
-edition = "2018"
+edition = "2021"
 
-merge_imports = true
+imports_granularity = "Crate"
 imports_layout = "HorizontalVertical"
 use_field_init_shorthand = true
 use_try_shorthand = true
-format_doc_comments = true
+format_code_in_doc_comments = true
 max_width = 115
 use_small_heuristics = "max"
